[package]
name = "mod_tile_rs"
version = "0.1.0"
authors = ["Kean H Lau <khklau@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mod_tile_rs"
crate-type = ["dylib"]

[build-dependencies]
bindgen = "0.57.0"

[dependencies]
chrono = "0.4.19"
configparser = "2.1.0"
ctor = "0.1.20"
env_logger = "0.8.4"
http = "0.2.5"
libc = "0.2.0"
log = "0.4.14"
md5 = "0.7.0"
mime = "0.3.16"
rs-snowflake = "0.5.0"
scan_fmt = "0.2.6"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thread-id = "4.0.0"
