[package]
name = "mod_tile_rs"
version = "0.1.0"
authors = ["Kean H Lau <khklau@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mod_tile_rs"
crate-type = ["dylib"]

[build-dependencies]
bindgen = "0.59.2"

[dev-dependencies]
mktemp = "0.4.1"
mockall = "0.11.3"

[dependencies]
chrono = "0.4.19"
configparser = "2.1.0"
const_format = "0.2.30"
ctor = "0.1.20"
enum-iterator = "0.7.0"
enum-iterator-derive = "0.7.0"
env_logger = "0.8.4"
fixedstr = "0.2.8"
http = "0.2.5"
libc = "0.2.0"
log = "0.4.14"
md5 = "0.7.0"
mime = "0.3.16"
png = "0.17.5"
rs-snowflake = "0.5.0"
scan_fmt = "0.2.6"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.59"
thread-id = "4.0.0"
